--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facebook Clone</title>
+    <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link href="./assets/css/output.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -70,7 +71,7 @@
         <!-- End Mobile Navbar-->
     </header>
     <main>
-        <!-- What is on your mind -->
+        <!-- What is on your mind section -->
         <section id="publish"
             class="grid grid-cols-6 border-b bg-white w-full h-auto border-gray-300 shadow p-2 items-center">
             <div>
@@ -90,6 +91,75 @@
                     <i class="fa-solid fa-images fa-2xl" style="color: #20ee49;"></i>
                 </div>
             </div>
+        </section>
+        <!-- End of What's on your mind section-->
+        <!-- Stories section -->
+        <section id="stories" class="bg-white my-1 py-2 ps-4  w-full">
+            <div class="overflow-x-auto  inline-flex w-full gap-2">
+                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden relative shadow-sm">
+                    <div class="h-1/2">
+                        <img src="https://randomuser.me/api/portraits/men/91.jpg" class="h-full w-full rounded-t-lg" />
+                    </div>
+                    <div class="h-1/2 flex items-center pb-1">
+                        <p class="font-bold text-wrap text-center"> Post on yout story</p>
+                    </div>
+                    <div class="bg-transparent inset-0 flex items-center justify-center absolute">
+                        <span
+                            class="h-10 w-10 border-4 border-white bg-blue-500 rounded-full flex items-center justify-center">
+                            <i class="fa-solid fa-plus" style="color: #ffffff;"></i>
+                        </span>
+                    </div>
+                </div>
+                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                    <span
+                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">21</span>
+                    <div class="h-full ">
+                        <img src="https://images.unsplash.com/photo-1501426026826-31c667bdf23d?q=80&w=1036&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="h-full rounded-t-lg" />
+                    </div>
+                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Tina Doe</span>
+                </div>
+                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                    <span
+                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">2</span>
+                    <div class="h-full ">
+                        <img src="https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="h-full rounded-t-lg" />
+                    </div>
+                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Terry
+                        Adams</span>
+                </div>
+                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                    <span
+                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">7</span>
+                    <div class="h-full ">
+                        <img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="h-full rounded-t-lg" />
+                    </div>
+                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">John Doe</span>
+                </div>
+                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                    <span
+                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">3</span>
+                    <div class="h-full ">
+                        <img src="https://images.unsplash.com/photo-1534179523731-b2922018150a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                            class="h-full rounded-t-lg" />
+                    </div>
+                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Ashley
+                        Benson</span>
+                </div>
+                <div class="h-44 w-16 pr-2 flex items-center justify-center">
+                    <i class="fa-solid fa-spinner fa-spin fa-sm" style="color: #000fff;"></i>
+                </div>
+            </div>
+        </section>
+        <!-- End stories section -->
+
+        <section id="loading-publications"
+            class="w-full flex flex-col gap-4 justify-center items-center py-10 bg-gray-300">
+            <i class="fa-solid fa-spinner fa-spin fa-xl" style="color: #383838;"></i>
+            <span class="font-bold text-gray-700">Loading more publications...
+            </span>
         </section>
     </main>
     <footer></footer>
