Added feed layout and some publications to mobile

--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
                         <img src="https://randomuser.me/api/portraits/men/91.jpg" class="h-full w-full rounded-t-lg" />
                     </div>
                     <div class="h-1/2 flex items-center pb-1">
-                        <p class="font-bold text-wrap text-center"> Post on yout story</p>
+                        <p class="font-bold text-wrap text-center"> Post on your story</p>
                     </div>
                     <div class="bg-transparent inset-0 flex items-center justify-center absolute">
                         <span
@@ -154,13 +154,191 @@
             </div>
         </section>
         <!-- End stories section -->
+        <!-- Publications section -->
+        <section id="publications" class="w-ful my-2 ">
+            <div class="bg-white grid h-fit mb-2" id="first-publication">
+                <div class="grid grid-cols-3">
+                    <div class="col-span-2 flex p-2 gap-2">
+                        <img class="h-12 w-12 bg-blue-500 rounded-full"
+                            src="https://randomuser.me/api/portraits/men/79.jpg" />
+                        <div class="flex flex-col">
+                            <div class="flex gap-2 items-center">
+                                <h3 class="font-bold text-lg">Eduard Doe</h3>
+                                <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
+                                <h3 class="font-bold text-sm text-blue-500">Follow</h3>
+                            </div>
+                            <div class="inline-flex gap-2 items-center">
+                                <span class="text-xs text-gray-400">1 min</span>
+                                <span class="h-1 w-1 bg-gray-400 rounded-full"></span>
+                                <i class="fa-solid fa-earth-americas fa-xs" style="color: #707070;"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-1">
+                        <div class="flex w-full justify-end items-center px-2 h-full">
+                            <i class="fa-solid fa-ellipsis fa-xl" style="color: #6b6b6b;"></i>
+                        </div>
+                    </div>
+                    <div id="publication-comment" class="col-span-3">
+                        <p class="p-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta nostrum eveniet
+                            numquam! Voluptatibus voluptas ducimus nobis, soluta officia modi ullam magni, aliquam
+                            laudantium fugit, sit temporibus necessitatibus explicabo veniam ea.</p>
+                    </div>
+                </div>
+                <div class="h-72 w-full">
+                    <img class="h-full w-full"
+                        src="https://images.unsplash.com/photo-1707343843982-f8275f3994c5?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                </div>
+                <div class="h-fit w-full flex items-center p-2">
+                    <ul class="inline-flex gap-2 items-center h-full justify-between w-full">
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-thumbs-up fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">Like</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-comment fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">Comment</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-share fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">Share</span>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bg-white grid h-fit mb-2" id="second-publication">
+                <div class="grid grid-cols-3">
+                    <div class="col-span-2 flex p-2 gap-2">
+                        <img class="h-12 w-12 bg-blue-500 rounded-full"
+                            src="https://randomuser.me/api/portraits/men/59.jpg" />
+                        <div class="flex flex-col">
+                            <div class="flex gap-2 items-center">
+                                <h3 class="font-bold text-lg">Rick Ryan</h3>
+                                <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
+                                <h3 class="font-bold text-sm text-blue-500">Following</h3>
+                            </div>
+                            <div class="inline-flex gap-2 items-center">
+                                <span class="text-xs text-gray-400">1 day</span>
+                                <span class="h-1 w-1 bg-gray-400 rounded-full"></span>
+                                <i class="fa-solid fa-earth-americas fa-xs" style="color: #707070;"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-1">
+                        <div class="flex w-full justify-end items-center px-2 h-full">
+                            <i class="fa-solid fa-ellipsis fa-xl" style="color: #6b6b6b;"></i>
+                        </div>
+                    </div>
+                    <div id="publication-comment" class="col-span-3">
+                        <p class="p-2">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit illo exercitationem
+                            repudiandae voluptas consectetur velit natus laudantium? Sit atque et eligendi neque porro
+                            officia inventore temporibus, consequuntur repellat. Aut, quod?
+                        </p>
+                    </div>
+                </div>
+                <div class="h-72 w-full">
+                    <img class="h-full w-full"
+                        src="https://images.unsplash.com/photo-1540497077202-7c8a3999166f?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                </div>
+                <div class="h-fit w-full flex items-center p-2">
+                    <ul class="inline-flex gap-2 items-center h-full justify-between w-full">
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-thumbs-up fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">1256</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-comment fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">46</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-share fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">12</span>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bg-white grid h-fit mb-2" id="thir-publication">
+                <div class="grid grid-cols-3">
+                    <div class="col-span-2 flex p-2 gap-2">
+                        <img class="h-12 w-12 bg-blue-500 rounded-full"
+                            src="https://randomuser.me/api/portraits/men/23.jpg" />
+                        <div class="flex flex-col">
+                            <div class="flex gap-2 items-center">
+                                <h3 class="font-bold text-lg">Tyson Fury</h3>
+                                <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
+                                <h3 class="font-bold text-sm text-blue-500">Following</h3>
+                            </div>
+                            <div class="inline-flex gap-2 items-center">
+                                <span class="text-xs text-gray-400">3 days</span>
+                                <span class="h-1 w-1 bg-gray-400 rounded-full"></span>
+                                <i class="fa-solid fa-earth-americas fa-xs" style="color: #707070;"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-1">
+                        <div class="flex w-full justify-end items-center px-2 h-full">
+                            <i class="fa-solid fa-ellipsis fa-xl" style="color: #6b6b6b;"></i>
+                        </div>
+                    </div>
+                    <div id="publication-comment" class="col-span-3">
+                        <p class="p-2">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia voluptas aspernatur quam
+                            exercitationem ipsa impedit eos officiis! Dolorem veniam excepturi recusandae, expedita a
+                            molestiae ullam repellat ipsam magni eius qui?
+                        </p>
+                    </div>
+                </div>
+                <div class="h-72 w-full">
+                    <img class="h-full w-full"
+                        src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                </div>
+                <div class="h-fit w-full flex items-center p-2">
+                    <ul class="inline-flex gap-2 items-center h-full justify-between w-full">
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-thumbs-up fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">+1 Mi</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-comment fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">5368</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="rounded-xl bg-slate-200 gap-2 w-28 h-10 flex justify-center items-center">
+                                <i class="fa-solid fa-share fa-lg" style="color: #5a5a5a;"></i>
+                                <span class="text-xs font-bold text-gray-700">+20 k</span>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
+        <!-- End of publications section -->
+        <!-- Loading publications section-->
         <section id="loading-publications"
             class="w-full flex flex-col gap-4 justify-center items-center py-10 bg-gray-300">
             <i class="fa-solid fa-spinner fa-spin fa-xl" style="color: #383838;"></i>
             <span class="font-bold text-gray-700">Loading more publications...
             </span>
         </section>
+        <!-- End loading publications section-->
     </main>
     <footer></footer>
 </body>
