--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,64 @@
 </head>
 
 <body class="bg-slate-200">
-    <header class="w-full p-2 border-b border-gray-300 shadow bg-white h-auto">
-        <section id="heading" class="flex justify-between items-center h-7 mb-2">
-            <div id="logo">
+    <!-- Heading -->
+    <header class="w-full p-2 sm:p-4 border-b border-gray-300 shadow bg-white h-auto">
+        <section id="heading" class="flex sm:grid sm:grid-cols-4 justify-between items-center h-7 mb-2">
+            <div id="logo" class="sm:flex items-center gap-4">
                 <a href="/" class="font-bold text-3xl text-blue-600">facebook</a>
+                <span class="h-8 w-8 rounded-full bg-slate-200 sm:flex items-center justify-center hidden">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </span>
             </div>
-            <div id="menu" class="flex gap-2">
+            <div id="navbar" class="hidden sm:col-span-2 sm:flex sm:items-center h-full w-full">
+                <ul class="list-none flex items-center h-full w-full justify-around">
+                    <li class="h-full flex items-center justify-center relative">
+                        <i class="fa-solid fa-house fa-lg" style="color: #1f71ff;"></i>
+                        <span class="absolute top-0 -end-3 rounded-lg text-white bg-red-600 text-xs px-1">
+                            15+
+                        </span>
+                    </li>
+                    <li class="h-full flex items-center justify-center">
+                        <i class="fa-solid fa-users fa-lg"></i>
+                    </li>
+                    <li class="h-full flex items-center justify-center">
+                        <i class="fa-solid fa-circle-play fa-lg"></i>
+                    </li>
+                    <li class="h-full flex items-center justify-center">
+                        <i class="fa-solid fa-store fa-lg"></i>
+                    </li>
+                    <li class="h-full flex items-center justify-center">
+                        <i class="fa-solid fa-bars fa-lg"></i>
+                    </li>
+                </ul>
+            </div>
+            <div id="tablet-navbar" class="h-full w-full  items-center sm:flex hidden">
+                <ul class="flex items-center gap-2">
+                    <li>
+                        <span class="h-10 w-10  flex items-center justify-center rounded-full bg-slate-200">
+                            <i class="fa-solid fa-plus"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="h-10 w-10 flex items-center justify-center rounded-full bg-slate-200">
+                            <i class="fa-solid fa-comment-dots"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="h-10 w-10 flex items-center justify-center rounded-full bg-slate-200">
+                            <i class="fa-solid fa-bell"></i>
+                        </span>
+                    </li>
+                    <li>
+                        <span class="h-10 w-10 flex items-center justify-center rounded-full bg-slate-200">
+                            <img src="https://randomuser.me/api/portraits/men/91.jpg"
+                                class="h-full w-full rounded-full" />
+                        </span>
+                    </li>
+                </ul>
+            </div>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="flex gap-2 sm:hidden">
                 <span class="bg-slate-300 h-8 w-8 rounded-full p-2 flex items-center justify-center">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </span>
@@ -26,9 +78,9 @@
                     <i class="fa-solid fa-bars"></i>
                 </span>
             </div>
+            <!-- Mobile Menu -->
         </section>
-        <!-- Mobile Navbar -->
-        <section class="w-full" id="navbar">
+        <section class="w-full sm:hidden" id="navbar">
             <ul class="list-none w-full h-12 flex justify-around items-center">
                 <li>
                     <span class="h-8 w-8 p-2 flex items-center justify-center relative">
@@ -68,92 +120,118 @@
                 </li>
             </ul>
         </section>
-        <!-- End Mobile Navbar-->
     </header>
-    <main>
-        <!-- What is on your mind section -->
-        <section id="publish"
-            class="grid grid-cols-6 border-b bg-white w-full h-auto border-gray-300 shadow p-2 items-center">
-            <div>
-                <div class="h-12 w-12 bg-slate-200 rounded-full relative">
-                    <img src="https://randomuser.me/api/portraits/men/91.jpg" class="w-full h-full rounded-full">
-                    <span
-                        class="h-4 w-4 border-2 border-white  rounded-full bg-green-400 bottom-0 end-0 absolute z-10"></span>
-                </div>
-            </div>
-            <div class="col-span-4">
-                <input
-                    class="bg-slate-200 w-full rounded-full placeholder:text-wrap placeholder:text-gray-800 placeholder:text-sm placeholder:px-2 h-10"
-                    placeholder="What is on your mind ?" />
-            </div>
-            <div class="h-full">
-                <div class="flex flex-col justify-center items-center h-full">
-                    <i class="fa-solid fa-images fa-2xl" style="color: #20ee49;"></i>
-                </div>
-            </div>
-        </section>
-        <!-- End of What's on your mind section-->
-        <!-- Stories section -->
-        <section id="stories" class="bg-white my-1 py-2 ps-4  w-full">
-            <div class="overflow-x-auto  inline-flex w-full gap-2">
-                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden relative shadow-sm">
-                    <div class="h-1/2">
-                        <img src="https://randomuser.me/api/portraits/men/91.jpg" class="h-full w-full rounded-t-lg" />
-                    </div>
-                    <div class="h-1/2 flex items-center pb-1">
-                        <p class="font-bold text-wrap text-center"> Post on your story</p>
-                    </div>
-                    <div class="bg-transparent inset-0 flex items-center justify-center absolute">
+    <!-- End Heading-->
+    <main class="overflow-hidden sm:px-20 sm:py-4 py-2">
+        <div class="sm:flex sm:flex-col-reverse">
+            <!-- What is on your mind section -->
+            <section id="publish"
+                class="grid grid-cols-6 border-b rounded-lg bg-white w-full h-auto border-gray-300 shadow p-2 items-center">
+                <div>
+                    <div class="h-12 w-12 bg-slate-200 rounded-full relative">
+                        <img src="https://randomuser.me/api/portraits/men/91.jpg" class="w-full h-full rounded-full">
                         <span
-                            class="h-10 w-10 border-4 border-white bg-blue-500 rounded-full flex items-center justify-center">
-                            <i class="fa-solid fa-plus" style="color: #ffffff;"></i>
-                        </span>
+                            class="h-4 w-4 border-2 border-white  rounded-full bg-green-400 bottom-0 end-0 absolute z-10"></span>
                     </div>
                 </div>
-                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
-                    <span
-                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">21</span>
-                    <div class="h-full ">
-                        <img src="https://images.unsplash.com/photo-1501426026826-31c667bdf23d?q=80&w=1036&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            class="h-full rounded-t-lg" />
+                <div class="col-span-4">
+                    <input
+                        class="bg-slate-200 w-full rounded-full placeholder:text-wrap placeholder:text-gray-800 placeholder:text-sm placeholder:px-2 h-10"
+                        placeholder="What is on your mind ?" />
+                </div>
+                <div class="h-full">
+                    <div class="flex flex-col justify-center items-center h-full">
+                        <i class="fa-solid fa-images fa-2xl" style="color: #20ee49;"></i>
                     </div>
-                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Tina Doe</span>
                 </div>
-                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
-                    <span
-                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">2</span>
-                    <div class="h-full ">
-                        <img src="https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            class="h-full rounded-t-lg" />
+            </section>
+            <!-- End of What's on your mind section-->
+            <!-- Stories section -->
+            <section id="stories" class="bg-white sm:bg-transparent my-1 py-2 ps-4 sm:ps-0  w-full">
+                <div class="overflow-x-auto  inline-flex w-full gap-2">
+                    <div
+                        class="h-44 min-w-24 sm:min-h-56 sm:min-w-36 bg-white border rounded-lg flex flex-col overflow-hidden relative shadow-sm">
+                        <div class="h-1/2">
+                            <img src="https://randomuser.me/api/portraits/men/91.jpg"
+                                class="h-full w-full rounded-t-lg" />
+                        </div>
+                        <div class="h-1/2 flex items-center pb-1">
+                            <p class="font-bold text-wrap text-center"> Post on your story</p>
+                        </div>
+                        <div class="bg-transparent inset-0 flex items-center justify-center absolute">
+                            <span
+                                class="h-10 w-10 border-4 border-white bg-blue-500 rounded-full flex items-center justify-center">
+                                <i class="fa-solid fa-plus" style="color: #ffffff;"></i>
+                            </span>
+                        </div>
                     </div>
-                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Terry
-                        Adams</span>
-                </div>
-                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
-                    <span
-                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">7</span>
-                    <div class="h-full ">
-                        <img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            class="h-full rounded-t-lg" />
+                    <div
+                        class="h-44 min-w-24 sm:min-h-56 sm:min-w-36 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                        <span
+                            class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">21</span>
+                        <div class="h-full ">
+                            <img src="https://images.unsplash.com/photo-1501426026826-31c667bdf23d?q=80&w=1036&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="h-full rounded-t-lg" />
+                        </div>
+                        <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Tina
+                            Doe</span>
                     </div>
-                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">John Doe</span>
-                </div>
-                <div class="h-44 min-w-24 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
-                    <span
-                        class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">3</span>
-                    <div class="h-full ">
-                        <img src="https://images.unsplash.com/photo-1534179523731-b2922018150a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                            class="h-full rounded-t-lg" />
+                    <div
+                        class="h-44 min-w-24 sm:min-h-56 sm:min-w-36 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                        <span
+                            class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">2</span>
+                        <div class="h-full ">
+                            <img src="https://images.unsplash.com/photo-1454391304352-2bf4678b1a7a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="h-full rounded-t-lg" />
+                        </div>
+                        <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Terry
+                            Adams</span>
                     </div>
-                    <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Ashley
-                        Benson</span>
+                    <div
+                        class="h-44 min-w-24 sm:min-h-56 sm:min-w-36 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                        <span
+                            class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">7</span>
+                        <div class="h-full ">
+                            <img src="https://images.unsplash.com/photo-1526506118085-60ce8714f8c5?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="h-full rounded-t-lg" />
+                        </div>
+                        <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">John
+                            Doe</span>
+                    </div>
+                    <div
+                        class="h-44 min-w-24 sm:min-h-56 sm:min-w-36 bg-white border rounded-lg flex flex-col overflow-hidden shadow-sm relative">
+                        <span
+                            class="absolute top-2 start-2 bg-blue-500 text-white font-bold text-xs px-1 rounded-lg">3</span>
+                        <div class="h-full ">
+                            <img src="https://images.unsplash.com/photo-1534179523731-b2922018150a?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                                class="h-full rounded-t-lg" />
+                        </div>
+                        <span class="absolute bottom-2 start-2 text-white font-bold text-sm text-wrap w-4">Ashley
+                            Benson</span>
+                    </div>
+                    <div class="h-44 w-20 sm:min-h-4 sm:min-w-20 flex items-center justify-center">
+                        <i class="fa-solid fa-spinner fa-spin fa-sm" style="color: #000fff;"></i>
+                    </div>
                 </div>
-                <div class="h-44 w-16 pr-2 flex items-center justify-center">
-                    <i class="fa-solid fa-spinner fa-spin fa-sm" style="color: #000fff;"></i>
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
         <!-- End stories section -->
+        <div class="hidden sm:block w-full h-16 border-t bg-white rounded-b-lg shadow-lg  border-gray-200">
+            <ul class="flex justify-between w-full h-full items-center px-10">
+                <li class="flex gap-2 items-center px-10 rounded-lg py-2 h-fit hover:bg-gray-300 duration-300">
+                    <i class="fa-solid fa-video" style="color: #f2072b;"></i>
+                    <span class="font-semibold">Live</span>
+                </li>
+                <li class="flex gap-2 items-center px-10 rounded-lg py-2 h-fit hover:bg-gray-300 duration-300">
+                    <i class="fa-solid fa-images" style="color: #63E6BE;"></i>
+                    <span class="font-semibold">Photo/Video</span>
+                </li>
+                <li class="flex gap-2 items-center px-10 rounded-lg py-2 h-fit hover:bg-gray-300 duration-300">
+                    <i class="fa-solid fa-face-smile" style="color: #FFD43B;"></i>
+                    <span class="font-semibold">Feelings</span>
+                </li>
+            </ul>
+        </div>
         <!-- Publications section -->
         <section id="publications" class="w-ful my-2 ">
             <div class="bg-white grid h-fit mb-2" id="first-publication">
@@ -163,7 +241,7 @@
                             src="https://randomuser.me/api/portraits/men/79.jpg" />
                         <div class="flex flex-col">
                             <div class="flex gap-2 items-center">
-                                <h3 class="font-bold text-lg">Eduard Doe</h3>
+                                <h3 class="font-bold text-lg text-nowrap">Eduard Doe</h3>
                                 <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
                                 <h3 class="font-bold text-sm text-blue-500">Follow</h3>
                             </div>
@@ -219,7 +297,7 @@
                             src="https://randomuser.me/api/portraits/men/59.jpg" />
                         <div class="flex flex-col">
                             <div class="flex gap-2 items-center">
-                                <h3 class="font-bold text-lg">Rick Ryan</h3>
+                                <h3 class="font-bold text-lg text-nowrap">Rick Ryan</h3>
                                 <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
                                 <h3 class="font-bold text-sm text-blue-500">Following</h3>
                             </div>
@@ -277,7 +355,7 @@
                             src="https://randomuser.me/api/portraits/men/23.jpg" />
                         <div class="flex flex-col">
                             <div class="flex gap-2 items-center">
-                                <h3 class="font-bold text-lg">Tyson Fury</h3>
+                                <h3 class="font-bold text-lg text-nowrap">Tyson Fury</h3>
                                 <span class="h-1 w-1 bg-gray-700 rounded-full"></span>
                                 <h3 class="font-bold text-sm text-blue-500">Following</h3>
                             </div>
@@ -329,7 +407,6 @@
                 </div>
             </div>
         </section>
-
         <!-- End of publications section -->
         <!-- Loading publications section-->
         <section id="loading-publications"
@@ -340,7 +417,6 @@
         </section>
         <!-- End loading publications section-->
     </main>
-    <footer></footer>
 </body>
 
 </html>
